--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Ignore virtual environment
+venv/
+# Ignore output folder
+output/
+# Ignore deployment folder
+_build/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
